# Leitor-e-Visualizador-de-Cenas-3D-com-OpenGL-GA

./: .gitignore  CMakeLists.txt  README.md
shaders/: grid.frag  phong.frag  phong.vert  wireframe.frag
src/: Camera.h  Mesh.h  Model.h  Shader.h  main.cpp
visualizador_opengl_ga/: CMakeLists.txt  README.md  setup_deps.ps1
visualizador_opengl_ga/shaders/: grid.frag  phong.frag  phong.vert
visualizador_opengl_ga/src/: Shader.h
